[package]
name = "wgpu-heterogeneous-compute-benchmark"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
wgpu = "0.5.0"
zerocopy = "0.3.0"

[dev-dependencies]
async-std = "1.6.0"
criterion = "0.3.2"
rand = "0.7.3"
itertools = "0.9.0"

[[bench]]
name = "addition"
harness = false
