[package]
name = "wgpu-heterogeneous-compute-benchmark"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
async-std = "1.6.0"
bitflags = "1.2.1"
rayon = "1.3.0"
wgpu = { git = "https://github.com/cwfitzgerald/wgpu-rs.git", version = "*", rev = "d12d142" }
zerocopy = "0.3.0"

[dev-dependencies]
async-std = "1.6.0"
criterion = "0.3.2"
env_logger = "0.7.1"
rand = "0.7.3"
itertools = "0.9.0"

[[bench]]
name = "addition"
harness = false
